# aevum

./: .clang-format  .clang-format-ignore  .clang-tidy.in  .editorconfig  .gitattributes  .gitignore  .gitmodules  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml  stale.yml
docs/: API.md  ARCHITECTURE.md  BUILDING.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md  GITHUB_CONFIG.md  PROJECT_STRUCTURE.md  README.md  SCRIPTS.md  SHELL_REFERENCE.md  THIRD_PARTY.md  TROUBLESHOOTING.md
scripts/: build.sh  format.sh  install.sh  test.sh
scripts/format/: format-cpp.sh  format-rust.sh  format.sh
scripts/install/: aevumdb.service  install.sh
scripts/test/: test.sh
src/aevum/: main.cpp
src/aevum/bson/: builder.cpp  builder.hpp
src/aevum/bson/doc/: document.cpp  document.hpp  iterator.cpp  iterator.hpp
src/aevum/bson/json/: parser.cpp  parser.hpp  serializer.cpp  serializer.hpp
src/aevum/client/: aevum_client.cpp  aevum_client.hpp
src/aevum/client/net/: connection.cpp  connection.hpp  server.cpp  server.hpp
src/aevum/db/: ffi.hpp
src/aevum/db/auth/: auth_manager.cpp  auth_manager.hpp  rbac.cpp  rbac.hpp  role.hpp
src/aevum/db/core/: core.cpp  core.hpp
src/aevum/db/index/: index_manager.cpp  index_manager.hpp  index_persistor.cpp  index_persistor.hpp  primary_indexer.cpp  primary_indexer.hpp  secondary_indexer.cpp  secondary_indexer.hpp
src/aevum/db/schema/: schema_manager.cpp  schema_manager.hpp  validator.cpp  validator.hpp
src/aevum/db/storage/: wiredtiger_store.cpp  wiredtiger_store.hpp
src/aevum/ffi/: Cargo.toml  rustfmt.toml
src/aevum/ffi/src/: lib.rs
src/aevum/ffi/src/query/: comparator.rs  matcher.rs  mod.rs  operations.rs  operators.rs  projection.rs
src/aevum/ffi/src/util/: from_c_str.rs  mod.rs  rust_free_string.rs  to_c_string.rs
src/aevum/ffi/tests/: test_count.rs  test_delete.rs  test_find.rs  test_update.rs  test_validate.rs
src/aevum/ffi/tests/common/: mod.rs
src/aevum/shell/: main.cpp
src/aevum/shell/parser/: command_parser.cpp  command_parser.hpp
src/aevum/shell/repl/: repl.cpp  repl.hpp
src/aevum/util/: defer.hpp  status.hpp
src/aevum/util/concurrency/: concurrent_queue.hpp  spinlock.cpp  spinlock.hpp  thread_name.cpp  thread_name.hpp  thread_pool.cpp  thread_pool.hpp  wait_group.cpp  wait_group.hpp
src/aevum/util/hash/: djb2.cpp  djb2.hpp  fnv1a.cpp  fnv1a.hpp
src/aevum/util/log/: log_level.hpp  logger.cpp  logger.hpp
src/aevum/util/memory/: arena_allocator.cpp  arena_allocator.hpp  object_pool.hpp
src/aevum/util/string/: case_conversion.cpp  case_conversion.hpp  split.cpp  split.hpp  trim.cpp  trim.hpp
src/aevum/util/time/: stopwatch.cpp  stopwatch.hpp  timestamp.cpp  timestamp.hpp
src/aevum/util/uuid/: random_engine.cpp  random_engine.hpp  v4.cpp  v4.hpp
